Modify date and title
Begin assignment

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- 
+        NIC DGL 203
+        Assignment 4B
+        Student: Will Lewthwaite
+        Modified Date: 26 November, 2021
+    -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Sass Tutorial</title>
+    <title>Assignment 4 B Weathered Oak</title>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
