--- a/index.html
+++ b/index.html
@@ -16,7 +16,53 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="menu-btn">
+            <span class="menu-btn_burger"></span>
+        </div>
+        <nav class="nav">
+            <ul class="menu-nav">
+                <li class="menu-nav_item active">
+                    <a href="index.html" class="menu-nav_link">Home</a>
+                </li>
+                <li class="menu-nav_item">
+                    <a href="about.html" class="menu-nav_link">About Me</a>
+                </li>
+                <li class="menu-nav_item">
+                    <a href="projects.html" class="menu-nav_link">Projects</a>
+                </li>
+                <li class="menu-nav_item">
+                    <a href="contact.html" class="menu-nav_link">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="home">
+            <h2>Hello! The Name Is</h2>
+            <h1 class="home_name">
+                Stock <span class="home_name--last">Photoguy</span>
+            </h1>
+            <h2>Web Developer, Designer, Programmer & Generic Face</h2>
+            <div class="social-icons">
+                <a href="#!">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+                <a href="#!">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="#!">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="#!">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </div>
+            <footer>&copy;Copyright MMXXI</footer>
+        </section>
+    </main>
+    <script src="https://kit.fontawesome.com/0fb89677a1.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
