--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Assignment 4 B Weathered Oak</title>
 </head>
