Added transition ease to social icons
Also fixed broken class tag

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <main>
         <section class="home">
             <h2>Hello! The Name Is</h2>
-            <h1 class="home_name">
-                Stock <span class="home_name--last">Photoguy</span>
+            <h1 class="home__name">
+                Stock <span class="home__name--last">Photoguy</span>
             </h1>
             <h2>Web Developer, Designer, Programmer & Generic Face</h2>
             <div class="social-icons">
