--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 <body>
     <header>
         <div class="menu-btn">
-            <span class="menu-btn_burger"></span>
+            <span class="menu-btn__burger"></span>
         </div>
         <nav class="nav">
             <ul class="menu-nav">
-                <li class="menu-nav_item active">
+                <li class="menu-nav__item active">
                     <a href="index.html" class="menu-nav_link">Home</a>
                 </li>
-                <li class="menu-nav_item">
+                <li class="menu-nav__item">
                     <a href="about.html" class="menu-nav_link">About Me</a>
                 </li>
-                <li class="menu-nav_item">
+                <li class="menu-nav__item">
                     <a href="projects.html" class="menu-nav_link">Projects</a>
                 </li>
-                <li class="menu-nav_item">
+                <li class="menu-nav__item">
                     <a href="contact.html" class="menu-nav_link">Contact Me</a>
                 </li>
             </ul>
