--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <nav class="nav">
             <ul class="menu-nav">
                 <li class="menu-nav__item active">
-                    <a href="index.html" class="menu-nav_link">Home</a>
+                    <a href="index.html" class="menu-nav__link">Home</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="about.html" class="menu-nav_link">About Me</a>
+                    <a href="about.html" class="menu-nav__link">About Me</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="projects.html" class="menu-nav_link">Projects</a>
+                    <a href="projects.html" class="menu-nav__link">Projects</a>
                 </li>
                 <li class="menu-nav__item">
-                    <a href="contact.html" class="menu-nav_link">Contact Me</a>
+                    <a href="contact.html" class="menu-nav__link">Contact Me</a>
                 </li>
             </ul>
         </nav>
