Write job descriptions

--- a/about.html
+++ b/about.html
@@ -42,6 +42,33 @@
         <section class="about">
             <div class="about__bio-image">
                 <h2 class="text-secondary">BIO</h2>
+                <p>This is where I tell you all about my amazing life as that guy you see in stock photos.
+                     My wife is the woman you see wearing a lab coat in pharmaceutical stock photos.
+                      Our kids are given energy drinks and star in toy commercials.</p>
+            </div>
+
+            <div class="jobs">
+                <div class="jobs__job">
+                    <h2 class="text-secondary">2017 - Current</h2>
+                    <h3>Google</h3>
+                    <h6>Full Stack Developer Guy</h6>
+                    <p>I pretended to look like I really knew what I was doing.
+                        Look at how focused I appear to be!</p>
+                </div>
+                <div class="jobs__job">
+                    <h2 class="text-secondary">2015 - 2017</h2>
+                    <h3>Microsoft</h3>
+                    <h6>Front End Developer Guy</h6>
+                    <p>I pretended to look like I really knew what I was doing.
+                        Look at how focused I appear to be!</p>
+                </div>
+                <div class="jobs__job">
+                    <h2 class="text-secondary">2012 - 2015</h2>
+                    <h3>Cayman Islands Offshore Holding Co.</h3>
+                    <h6>Designer Guy</h6>
+                    <p>I pretended to look like I really knew what I was doing.
+                        Look at how focused I appear to be!</p>
+                </div>
             </div>
 
             <div class="social-icons">
