Style text in about-bio, add padding & margin

--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Assignment 4B Weathered Oak About</title>
 </head>
@@ -41,10 +42,12 @@
     <main>
         <section class="about">
             <div class="about__bio-image">
-                <h2 class="text-secondary">BIO</h2>
-                <p>This is where I tell you all about my amazing life as that guy you see in stock photos.
-                     My wife is the woman you see wearing a lab coat in pharmaceutical stock photos.
-                      Our kids are given energy drinks and star in toy commercials.</p>
+                <div class="about__bio">
+                    <h2 class="text-secondary">BIO</h2>
+                    <p>This is where I tell you all about my amazing life as that guy you see in stock photos.
+                        My wife is the woman you see wearing a lab coat in pharmaceutical stock photos.
+                        Our kids are given energy drinks and star in toy commercials.</p>
+                </div>
             </div>
 
             <div class="jobs">
