--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                 <h1 class="text-secondary">My Projects</h1>
             </div>
 
-            <div class="project__items">
+            <div class="projects__items">
                 <div class="projects__item">
                     <img src="img/project-1.jpg" alt="My Project">
                     <div class="projects__btns">
